# Simple-3D-editor

./: .gitignore  CMakeLists.txt
res/data/: cutObject.txt
res/data/light/: globalLight.txt  pointLights.txt
res/data/object/: cutObject.txt
res/materials/: naturalMaterials.txt
res/shaders/: defaultFrag.glsl  defaultLightFrag.glsl  defaultLightVert.glsl  defaultNormalsGeom.glsl  defaultNormalsVert.glsl  defaultTextureFrag.glsl  defaultTextureVert.glsl  defaultVert.glsl  trajectoryLineFrag.glsl  trajectoryLineVert.glsl
src/: Camera.cpp  Camera.h  Enums.h  GLFWManagement.cpp  GLFWManagement.h  LightManager.cpp  LightManager.h  LightTypes.h  MaterialTypes.h  OpenGLManager.cpp  OpenGLManager.h  ReplicatedCutObject.cpp  ReplicatedCutObject.h  ResourcesManager.cpp  ResourcesManager.h  ShaderProgram.cpp  ShaderProgram.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  main.cpp
